--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "server.ts",
   "scripts": {
+    "start": "ts-node src/server.ts",
+    "dev": "nodemon --exec ts-node ./src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
