--- a/server/package.json
+++ b/server/package.json
@@ -1,26 +1,35 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "main": "server.ts",
-  "scripts": {
-    "start": "ts-node src/server.ts",
-    "dev": "nodemon --exec ts-node ./src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "express": "^4.21.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.7"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^22.5.5",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.2"
-  }
+   "name": "server",
+   "version": "1.0.0",
+   "main": "server.ts",
+   "scripts": {
+      "start": "ts-node src/index.ts",
+      "dev": "nodemon --exec ts-node ./src/server.ts",
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "description": "",
+   "dependencies": {
+      "bcryptjs": "^2.4.3",
+      "class-transformer": "^0.5.1",
+      "class-validator": "^0.14.1",
+      "express": "^4.21.0",
+      "morgan": "^1.10.0",
+      "nodemon": "^3.1.7",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.2.2",
+      "typeorm": "0.3.20"
+   },
+   "devDependencies": {
+      "@types/bcryptjs": "^2.4.6",
+      "@types/express": "^4.17.21",
+      "@types/morgan": "^1.9.9",
+      "@types/node": "^16.11.10",
+      "ts-node": "10.9.1",
+      "ts-node-dev": "^2.0.0",
+      "typescript": "4.5.2"
+   }
 }
