--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
       "bcryptjs": "^2.4.3",
       "class-transformer": "^0.5.1",
       "class-validator": "^0.14.1",
+      "cors": "^2.8.5",
       "express": "^4.21.0",
       "morgan": "^1.10.0",
       "nodemon": "^3.1.7",
@@ -25,6 +26,7 @@
    },
    "devDependencies": {
       "@types/bcryptjs": "^2.4.6",
+      "@types/cors": "^2.8.17",
       "@types/express": "^4.17.21",
       "@types/morgan": "^1.9.9",
       "@types/node": "^16.11.10",
