--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
