--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
       "express": "^4.21.0",
       "jsonwebtoken": "^9.0.2",
       "morgan": "^1.10.0",
+      "multer": "^1.4.5-lts.1",
       "nodemon": "^3.1.7",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.2.2",
@@ -36,6 +37,7 @@
       "@types/express": "^4.17.21",
       "@types/jsonwebtoken": "^9.0.7",
       "@types/morgan": "^1.9.9",
+      "@types/multer": "^1.4.12",
       "@types/node": "^16.11.10",
       "ts-node": "10.9.1",
       "ts-node-dev": "^2.0.0",
